tests/core/errors/test_command_report_data/TARGETS.fixture
load(":defs.bzl", "build_fail")

trivial_build(name = "build_success")

build_fail(name = "fail1")
build_fail(name = "fail2")
